Save my current changes before creating branch

--- a/Ingredients.html
+++ b/Ingredients.html
@@ -26,8 +26,8 @@
           <p class="Text-title">Cafe Rencontre</p>
         </div>
         <button id="back-button" class="back-btn">
-          <span class="back-icon"><img src="/Background-Image/back-btn.png" alt=""></span>
-          <p>Back to Menu</p>
+          <span class="back-icon"><img src="/Background-Image/Lock Icon.svg" alt=""></span>
+          <p>Log out</p>
         </button>
       </div>
       <div class="container-bar">
@@ -38,7 +38,7 @@
           </div>
           <div class="Ingredients">
             <img src="/Background-Image/storage.png" alt="">
-            <li><a href="Ingredients.html">Ingredients</a></li>
+            <li><a href="Ingredients.html" class="active">Ingredients</a></li>
           </div>
           <div class="cart">
             <img src="/Background-Image/cart.png" alt="">
