--- a/Login.html
+++ b/Login.html
@@ -15,7 +15,7 @@
     <span class="image-bg1-2"><img src="/Background-Image/image 10.png" alt=""></span>
   </div>
   <div class="login-card">
-    <div  class="Logo">
+    <div class="Logo" onclick="window.location.href='index.html'" style="cursor: pointer;">
       <img src="/Background-Image/Cafe Rencontre Logo.svg" alt="Cafe Rencontre Logo">
     </div>
     <div class="Texttitle">
