--- a/Product.html
+++ b/Product.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
+    <link rel="stylesheet" href="Ingredients.css">
     <link rel="stylesheet" href="Product.css">
     <link rel="stylesheet" href="Orders.css">
-    <link rel="stylesheet" href="Ingredients.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lily+Script+One&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -27,15 +27,15 @@
           <p class="Text-title">Cafe Rencontre</p>
         </div>
         <button id="back-button" class="back-btn">
-          <span class="back-icon"><img src="/Background-Image/back-btn.png" alt=""></span>
-          <p>Back to Menu</p>
+          <span class="back-icon"><img src="/Background-Image/Lock Icon.svg" alt=""></span>
+          <p>Log out</p>
         </button>
       </div>
       <div class="container-bar">
         <ul class="nav-bar">
           <div class="products">
             <img src="/Background-Image/Box.png" alt="">
-            <li><a href="Products">Products</a></li>
+            <li><a href="Product.html" class="active">Products</a></li>
           </div>
           <div class="Ingredients">
             <img src="/Background-Image/storage.png" alt="">
@@ -66,7 +66,6 @@
         <div id="search" class="search-container">
           <span><img id="search-icon" class="icon" src="/Background-Image/magnifying glass.png" alt=""></span>
           <input class="search-bar" type="text" placeholder="Search">
-          <span><img id="filter-icon" class="icon" src="/Background-Image/filter icon.png" alt=""></span>
         </div>
         
         <div id="productList" class="product-list"></div>
@@ -82,6 +81,8 @@
             <input list="option" id="pcategory" class="input-box-category">
             <datalist id="option">
               <option value="Brewed Based"></option>
+              <option value="Milk Series"></option>
+              <option value="Fruit Soda"></option>
             </datalist>
 
             <label class="title">Description:</label>
@@ -96,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div id="deletePopup" class="popup">
+        <div id="deletePopup" class="popup-container">
             <div class="popup-content">
                 <span id="closeDeletePopup" class="close">&times;</span>
                 <h2>Delete Product</h2>
